samples/_failures_safe/1761549755_bfd17d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b88c5d8d.c: In function ‘main’:
./samples/SAFE/__tmp_b88c5d8d.c:139:9: error: expected expression at end of input
  139 |         if (*endptr != '\0' || value < 0 || value >
      |         ^~
./samples/SAFE/__tmp_b88c5d8d.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b88c5d8d.c:139:9: error: expected declaration or statement at end of input
